k8s/encrypo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: encrypo-app-ingress
  namespace: gdpr
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /encrypo/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: encrypo-app
                port:
                  number: 80
